Issue 55 (in progress) dark mode for Fachinfo

--- a/AmiKoOSX/amiko_stylesheet.css
+++ b/AmiKoOSX/amiko_stylesheet.css
@@ -1,5 +1,5 @@
 #menue{z-index:1;position:fixed;left:0px;top:0px;}
-#monographie{margin-left:0px;margin-right:0px;margin-top:20px;margin-bottom:20px;font-family:"Lucida Grande","Arial","Tahoma","Helvetica","Geneva","sans-serif";color:black;}
+#monographie{margin-left:0px;margin-right:0px;margin-top:20px;margin-bottom:20px;font-family:"Lucida Grande","Arial","Tahoma","Helvetica","Geneva","sans-serif";color:var(--text-color-normal);background-color:var(--background-color-normal);}
 #monographie .MonTitle{font-size:1.5em;font-weight:bold;margin-bottom:0.2em;}
 #monographie .absTitle{font-size:0.9em;font-weight:bold;font-style:normal;margin-bottom:0.0em;}
 #monographie .untertitle{font-size:0.9em;font-weight:normal;margin-top:0.5em;margin-bottom:0.0em;}
@@ -8,22 +8,22 @@
 #monographie .footer{font-size:0.85em;font-weight:normal;color:#999999;margin-top:2.0em;border-top:#999999 1px solid;padding-top:0.5em;}
 #monographie div p{font-size:0.9em;}
 #monographie .paragraph{font-weight:normal;font-style:normal;margin-top:0.8em;}.noSpacing{margin-top:0em;margin-bottom:0em;}.spacing1{margin-top:0em;margin-bottom:0.25em;}.spacing2{margin-top:0em;margin-bottom:0.5em;}
-#monographie .ownerCompany{font-size:1em;font-style:italic;font-weight:bold;text-align:right;margin-bottom:1.0em;border-top:black 1px solid;border-bottom:black 1px solid;padding-top:0.2em;padding-bottom:0.2em;}
+#monographie .ownerCompany{font-size:1em;font-style:italic;font-weight:bold;text-align:right;margin-bottom:1.0em;border-top:var(--text-color-normal) 1px solid;border-bottom:var(--text-color-normal) 1px solid;padding-top:0.2em;padding-bottom:0.2em;}
 #monographie .titleAdd{font-size:0.9em;font-weight:bold;font-style:italic;}
 #monographie .shortCharacteristic{font-size:1.1em;font-style:italic;}
 #monographie .indention1{margin-left:5em;}
 #monographie .indention2{margin-left:10em;}
 #monographie .indention3{margin-left:15em;}
-#monographie .box{font-size:.9em;font-weight:normal;font-style:normal;margin-top:5px;margin-bottom:5px;padding-top:5px;padding-bottom:6px;padding-left:5px;padding-right:5px;border-width:1px;border-color:Black;border-style:solid;}
+#monographie .box{font-size:.9em;font-weight:normal;font-style:normal;margin-top:5px;margin-bottom:5px;padding-top:5px;padding-bottom:6px;padding-left:5px;padding-right:5px;border-width:1px;border-color:var(--text-color-normal);border-style:solid;}
 #monographie .image{margin-top:20px;margin-bottom:20px;}
-#monographie table{font-family:"Courier New","sans-serif";font-size:1.0em;margin-top:1.0em;margin-bottom:1.0em;border-top:solid 1px black;border-bottom:solid 1px black;}
+#monographie table{font-family:"Courier New","sans-serif";font-size:1.0em;margin-top:1.0em;margin-bottom:1.0em;border-top:solid 1px var(--text-color-normal);border-bottom:solid 1px var(--text-color-normal);}
 #monographie td{font-family:"Courier New","sans-serif";font-size:1.0em;}
-.rowSepBelow{border-bottom:solid 1px black;}
+.rowSepBelow{border-bottom:solid 1px var(--text-color-normal);}
 .goUp{float:right;margin-right:-40px;}
-.tblArticles{border:solid 1pt #E5E7E8;vertical-align:top;text-align:left;border-spacing:0;width:100%;}
-.tblArticles .product{width:37%;font-size:small;vertical-align:top;border-top:solid 1pt #E5E7E8;border-right:solid 1pt #E5E7E8;}
+.tblArticles{border:solid 1pt var(--lines-color);vertical-align:top;text-align:left;border-spacing:0;width:100%;}
+.tblArticles .product{width:37%;font-size:small;vertical-align:top;border-top:solid 1pt var(--lines-color);border-right:solid 1pt var(--lines-color);}
 .tblArticles .productEmpty{width:37%;}
-.tblArticles .normal-right{border-right:solid 1pt #E5E7E8;border-top:solid 1pt #E5E7E8;width:15%;text-align:right;vertical-align:top;font-size:small;}
-.tblArticles .normal-center{border-right:solid 1pt #E5E7E8;border-top:solid 1pt #E5E7E8;width:10%;text-align:center;vertical-align:top;font-size:small;}
-.tblArticles .picture{width:15%;text-align:center;border-top:solid 1pt #E5E7E8;}
-.tblArticles .pictureEmpty{width:15%;border-top:solid 1pt #E5E7E8;}
+.tblArticles .normal-right{border-right:solid 1pt var(--lines-color);border-top:solid 1pt var(--lines-color);width:15%;text-align:right;vertical-align:top;font-size:small;}
+.tblArticles .normal-center{border-right:solid 1pt var(--lines-color);border-top:solid 1pt var(--lines-color);width:10%;text-align:center;vertical-align:top;font-size:small;}
+.tblArticles .picture{width:15%;text-align:center;border-top:solid 1pt var(--lines-color);}
+.tblArticles .pictureEmpty{width:15%;border-top:solid 1pt var(--lines-color);}
